Added Navigation To Support Added Title bar details Centre

--- a/NoMo/NoMo/NoMo/MainPage.xaml
+++ b/NoMo/NoMo/NoMo/MainPage.xaml
@@ -2,8 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NoMo.MainPage">
-
-     <ContentPage.Content>
+    
+    <NavigationPage.TitleView>
+        <Label Text ="NoMo" HorizontalOptions="Center" />
+    </NavigationPage.TitleView>
+    
+    <ContentPage.Content>
        
     <ScrollView>
         <FlexLayout Direction="Column"
@@ -15,7 +19,7 @@
 
 
                 <Button Text="Support"
-                    Command="{Binding NavigateCommand}"
+                    Clicked="Button_Clicked"
                      />
             
             <Button Text="Legal Education"
