--- a/NoMo/NoMo/NoMo/MotivationalQuotes.xaml
+++ b/NoMo/NoMo/NoMo/MotivationalQuotes.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NoMo.MotivationQuotes" Background="#96989B">
+             x:Class="NoMo.MotivationalQuotes" Background="#96989B">
     <ContentPage.Content>
         <StackLayout>
-            
+           
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
