--- a/NoMo/NoMo/NoMo/Awareness.xaml
+++ b/NoMo/NoMo/NoMo/Awareness.xaml
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NoMo.Awareness" BackgroundColor="#96989B">
+             x:Class="NoMo.Awareness">
     
     <ContentPage.Content>
         <StackLayout>
-           
+            <WebView HeightRequest="500" VerticalOptions="StartAndExpand" 
+                     Source="http://gbv1.azurewebsites.net/2021/03/04/general-information-awareness/">
+            </WebView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
