--- a/NoMo/NoMo/NoMo/CapePeninsulaSupport.xaml
+++ b/NoMo/NoMo/NoMo/CapePeninsulaSupport.xaml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NoMo.CapePeninsulaSupport" Background="#96989B">
+             x:Class="NoMo.CapePeninsulaSupport">
     <ContentPage.Content>
         <StackLayout>
-           
+            <WebView HeightRequest="500" VerticalOptions="StartAndExpand" 
+                     Source="http://gbv1.azurewebsites.net/2021/02/15/cape-peninsula-support-centres/">
+            </WebView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
