--- a/NoMo/NoMo/NoMo/Laws.xaml
+++ b/NoMo/NoMo/NoMo/Laws.xaml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NoMo.Laws" Background="#96989B">
+             x:Class="NoMo.Laws">
     <ContentPage.Content>
         <StackLayout>
-            
+            <WebView HeightRequest="500" VerticalOptions="StartAndExpand" 
+                     Source="http://gbv1.azurewebsites.net/2021/03/04/laws/ ">
+            </WebView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
