--- a/NoMo/NoMo/NoMo/NoMoFlyout.xaml
+++ b/NoMo/NoMo/NoMo/NoMoFlyout.xaml
@@ -1,16 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <FlyoutPage xmlns="http://xamarin.com/schemas/2014/forms"
-            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-            xmlns:local1="clr-namespace:NoMo" 
-            x:Class="FlyoutPageNavigation.MainPageFly">
-  <FlyoutPage.Flyout>
-    <local1:NoMoFlyout x:Name="FlyoutPage" />
-  </FlyoutPage.Flyout>
-  <FlyoutPage.Detail>
-    <NavigationPage>
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:NoMo" 
+            x:Class="NoMo.NoMoFlyout">
+    
+    <FlyoutPage.Flyout>
+
+        <ContentPage Title="NoMo" Icon="hamburger.png">
+
+            <StackLayout>
+                <Image HeightRequest="80" Source="uwclogo.png"/>
+                <ListView ItemsSource="{Binding MenuItems}" HasUnevenRows="True" SelectionMode="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="80"/>
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="20"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="20"/>
+                                    </Grid.RowDefinitions>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                    
+                </ListView>
+            </StackLayout>
+        </ContentPage >
+        </FlyoutPage.Flyout>
+        <FlyoutPage.Detail>
+            <NavigationPage>
       <x:Arguments>
-        <local1:NoMoFlyout />
+        <local:MainPage/>
       </x:Arguments>
     </NavigationPage>
-  </FlyoutPage.Detail>
+        </FlyoutPage.Detail>
 </FlyoutPage>
