--- a/NoMo/NoMo/NoMo/Pledge.xaml
+++ b/NoMo/NoMo/NoMo/Pledge.xaml
@@ -1,14 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NoMo.Awareness">
-    
+             x:Class="NoMo.Pledge">
     <ContentPage.Content>
         <StackLayout>
             <WebView HeightRequest="500" VerticalOptions="StartAndExpand" 
-                     Source="http://gbv1.azurewebsites.net/2021/03/04/general-information-awareness/">
-                
+                     Source="">
+
             </WebView>
         </StackLayout>
     </ContentPage.Content>
-</ContentPage> 
+</ContentPage>
