--- a/NoMo/NoMo/NoMo/MainPage.xaml
+++ b/NoMo/NoMo/NoMo/MainPage.xaml
@@ -19,7 +19,7 @@
                 <Button Text="Awareness"
                         VerticalOptions="CenterAndExpand"
                 HorizontalOptions="Center"
-                    Clicked="Button_Clicked"
+                    Clicked="AwarenessClicked"
                      BackgroundColor="#CC6666"
                         Font="Bold "
                         TextColor="WhiteSmoke"
@@ -32,7 +32,7 @@
                 <Button Text="Support"
                         VerticalOptions="CenterAndExpand"
                 HorizontalOptions="Center"
-                    Clicked="Button_Clicked_1"
+                    Clicked="SupportClicked"
                         BackgroundColor="#330099"
                         Font="Bold"
                         TextColor="WhiteSmoke"
@@ -44,7 +44,7 @@
                 <Button Text="Legal Education"
                     VerticalOptions="CenterAndExpand"
                 HorizontalOptions="Center"
-                   Clicked="Button_Clicked_2"
+                   Clicked="LegalEducationClicked"
                         BackgroundColor="#CC6666"
                         Font="Bold "
                         TextColor="WhiteSmoke"
