Correcting click feature on MainPage

--- a/NoMo/NoMo/NoMo/NoMoFlyout.xaml
+++ b/NoMo/NoMo/NoMo/NoMoFlyout.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <FlyoutPage xmlns="http://xamarin.com/schemas/2014/forms"
-            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:NoMo" x:DataType="local:FakeSecurityService"
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:NoMo;assembly=NoMo" x:DataType="local:FakeSecurityService" 
             x:Class="NoMo.NoMoFlyout">
     
     <FlyoutPage.Flyout>
@@ -44,9 +44,15 @@
         </FlyoutPage.Flyout>
     <FlyoutPage.Detail>
         <NavigationPage>
-      <x:Arguments>
-        <local:MainPage/>
-      </x:Arguments>
+            <x:Arguments>
+                <local:MainPage/>
+                <local:Awareness />
+                <local:SupportMenu />
+                <local:LegalEducation />
+                <local:MotivationalQuotes />
+                <local:Testimonials/>
+                <local:Pledge />
+            </x:Arguments>
     </NavigationPage>
         </FlyoutPage.Detail>
 </FlyoutPage>
