--- a/NoMo/NoMo/NoMo/CapePeninsulaRegion.xaml
+++ b/NoMo/NoMo/NoMo/CapePeninsulaRegion.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NoMo.CapePeninsulaRegion" BarBackgroundColor="#96989B">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:nomo="clr-namespace:NoMo"
+            x:Class="NoMo.CapePeninsulaRegion" BarBackgroundColor="#96989B">
   <!--Pages can be added as references or inline-->
   
-    <ContentPage Title="Police"/>
-    <ContentPage Title="Support Centres" />
-    <ContentPage Title="Shelters" />
+    <nomo:CapePeninsulaPolice Title="Police"/>
+    <nomo:CapePeninsulaSupport Title="Support Centres" />
+    <nomo:CapePeninsulaShelters Title="Shelters" />
 </TabbedPage>
