--- a/NoMo/NoMo/NoMo/NoMoFlyout.xaml
+++ b/NoMo/NoMo/NoMo/NoMoFlyout.xaml
@@ -1,57 +1,56 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <FlyoutPage xmlns="http://xamarin.com/schemas/2014/forms"
-            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:NoMo;assembly=NoMo" x:DataType="local:FakeSecurityService" 
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:services="clr-namespace:FlyoutMenuExample.Services" xmlns:nomo="clr-namespace:NoMo" xmlns:behaviours="clr-namespace:FlyoutMenuExample.Behaviours" xmlns:converters="clr-namespace:FlyoutMenuExample.Converters"
             x:Class="NoMo.NoMoFlyout">
     
     <FlyoutPage.Flyout>
 
-        <ContentPage Title="NoMo" Icon="hamburger.png">
-            
+        <ContentPage Title="NoMo" Icon="hamburger.png" BackgroundColor="White">
+            <ContentPage.Resources>
+                <ResourceDictionary>
+                    <converters:ItemTappedEventArgsConverter x:Key="SelectedItemConverter" />
+                </ResourceDictionary>
+            </ContentPage.Resources>
             <StackLayout>
-                <Image HeightRequest="80" Source="flyoutmenu.png"/>
-                <ListView ItemsSource="{Binding MenuItems}" HasUnevenRows="True" SelectionMode="Single">
+                <Image HeightRequest="180" Source="flyoutmenu.png"/>
+                <ListView ItemsSource="{Binding MenuItems}" HasUnevenRows="True" SelectionMode="None">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <ViewCell>
-                                <Grid>
 
+                            <ViewCell>
+                                <Grid>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="80"/>
+                                        
+                                        <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
 
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="20"/>
                                         <RowDefinition Height="*"/>
                                         <RowDefinition Height="20"/>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="20"/>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="20"/>
-                                        <RowDefinition Height="*"/>
-                                        <RowDefinition Height="20"/>
                                     </Grid.RowDefinitions>
-                                    <Label x:DataType="local:FakeSecurityService" Margin="15,0,0,0" Text="{Binding MenuItemName}"  Grid.Column="1" Grid.Row="1" FontSize="Medium"/>
+
+                                    
+                                    <Label Margin="15,0,0,0" Text="{Binding MenuItemName}"  Grid.Column="0" Grid.Row="1" FontSize="Medium"/>
 
                                 </Grid>
-
                             </ViewCell>
-                    </DataTemplate>
+
+                        </DataTemplate>
                 </ListView.ItemTemplate>
-                    
+                    <ListView.Behaviors>
+                        <behaviours:EventToCommandBehavior EventName="ItemTapped" Command="{Binding NavigateCommand}" Converter="{StaticResource SelectedItemConverter}" />
+                    </ListView.Behaviors>
+
                 </ListView>
             </StackLayout>
         </ContentPage >
         </FlyoutPage.Flyout>
     <FlyoutPage.Detail>
-        <NavigationPage>
+        <NavigationPage BarBackgroundColor="#96989B">
             <x:Arguments>
-                <local:MainPage/>
-                <local:Awareness />
-                <local:SupportMenu />
-                <local:LegalEducation />
-                <local:MotivationalQuotes />
-                <local:Testimonials/>
-                <local:Pledge />
+                <nomo:MainPage/>
+               
             </x:Arguments>
     </NavigationPage>
         </FlyoutPage.Detail>
