--- a/NoMo/NoMo/NoMo/MainPage.xaml
+++ b/NoMo/NoMo/NoMo/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NoMo.MainPage">
+             x:Class="NoMo.MainPage"
+             BackgroundImageSource="mainpagebackground.jpg">
 
 
     <NavigationPage.TitleView>
@@ -23,8 +24,8 @@
                         Font="Bold "
                         TextColor="WhiteSmoke"
                         FontSize="Large"
-                        Padding="15" 
-                        CornerRadius="10"
+                        Padding="20" 
+                        CornerRadius="15"
                         />
 
 
@@ -36,8 +37,8 @@
                         Font="Bold"
                         TextColor="WhiteSmoke"
                         FontSize="Large"
-                        Padding="15" 
-                        CornerRadius="10"
+                        Padding="20" 
+                        CornerRadius="15"
                      />
 
                 <Button Text="Legal Education"
@@ -48,8 +49,8 @@
                         Font="Bold "
                         TextColor="WhiteSmoke"
                         FontSize="Large"
-                        Padding="15" 
-                        CornerRadius="10"
+                        Padding="20" 
+                        CornerRadius="15"
                      />
                 
             </FlexLayout>
