--- a/NoMo/NoMo/NoMo/MotivationalQuotes.xaml
+++ b/NoMo/NoMo/NoMo/MotivationalQuotes.xaml
@@ -1,17 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NoMo.MotivationalQuotes">
+             x:Class="NoMo.MotivationalQuotes"
+             BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Quote of the day!"
-               FontSize="50"
-               FontAttributes="Bold"
-               HorizontalOptions="Center" />
+            <Label Text="
+                   Quote of the day!"
+               FontSize="60"
+               FontAttributes="Bold" 
+                   HorizontalTextAlignment="Center"
+                   TextColor="#CC6666"/>
 
             <ImageButton Source="MQ1.jpg"
-                    HorizontalOptions="Center"
-                    VerticalOptions="CenterAndExpand" />
+                         HorizontalOptions="FillAndExpand"
+                         VerticalOptions="FillAndExpand"
+                         BackgroundColor="White"/>
+            
 
         </StackLayout>
     </ContentPage.Content>
