--- a/NoMo/NoMo/NoMo/NoMoFlyout.xaml
+++ b/NoMo/NoMo/NoMo/NoMoFlyout.xaml
@@ -12,7 +12,7 @@
                 </ResourceDictionary>
             </ContentPage.Resources>
             <StackLayout>
-                <Image HeightRequest="180" Source="flyoutmenu.png"/>
+                <Image HeightRequest="200" Source="flyoutmenu.png"/>
                 <ListView ItemsSource="{Binding MenuItems}" HasUnevenRows="True" SelectionMode="None">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -31,7 +31,7 @@
                                     </Grid.RowDefinitions>
 
                                     
-                                    <Label Margin="15,0,0,0" Text="{Binding MenuItemName}"  Grid.Column="0" Grid.Row="1" FontSize="Medium"/>
+                                    <Label Margin="15,0,0,0" Text="{Binding MenuItemName}"  Grid.Column="0" Grid.Row="1" FontSize="Medium" HorizontalOptions="CenterAndExpand"/>
 
                                 </Grid>
                             </ViewCell>
