--- a/NoMo/NoMo/NoMo/MainPage.xaml
+++ b/NoMo/NoMo/NoMo/MainPage.xaml
@@ -2,11 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NoMo.MainPage"
-             BackgroundImageSource="mainpagebackground.jpg">
+             BackgroundImageSource="mainpagebackground2.jpg">
 
 
     <NavigationPage.TitleView>
-        <Label Text ="NoMo" HorizontalOptions="Center" TextColor="White" FontSize="20" FontAttributes="Bold"/>
+        <Label Text ="NoMo" HorizontalTextAlignment="Start" TextColor="White" FontSize="20" FontAttributes="Bold"/>
     </NavigationPage.TitleView>
 
     <ContentPage.Content>
