--- a/NoMo/NoMo/NoMo/GRKKSupport.xaml
+++ b/NoMo/NoMo/NoMo/GRKKSupport.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NoMo.GRKKSupport">
     <ContentPage.Content>
-        <StackLayout>
-            <WebView HeightRequest="500" VerticalOptions="StartAndExpand" 
+        <StackLayout VerticalOptions="FillAndExpand">
+            <WebView VerticalOptions="FillAndExpand" 
                      Source="http://gbv1.azurewebsites.net/2021/02/15/garden-route-and-klein-karoo-support-centres/">
             </WebView>
         </StackLayout>
