--- a/NoMo/NoMo/NoMo/OverbergRegion.xaml
+++ b/NoMo/NoMo/NoMo/OverbergRegion.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:nomo="clr-namespace:NoMo"
-            x:Class="NoMo.OverbergRegion" BarBackgroundColor="#96989B">
+            x:Class="NoMo.OverbergRegion" BarBackgroundColor="#96989B" UnselectedTabColor="White" SelectedTabColor="#CC6666">
   <!--Pages can be added as references or inline-->
     <nomo:OverbergPolice Title="Police" />
     <nomo:OverbergSupport Title="Support Centres" />
