--- a/NoMo/NoMo/NoMo/NoMoFlyout.xaml
+++ b/NoMo/NoMo/NoMo/NoMoFlyout.xaml
@@ -22,6 +22,7 @@
                                     <Grid.ColumnDefinitions>
                                         
                                         <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
 
                                     <Grid.RowDefinitions>
@@ -31,7 +32,8 @@
                                     </Grid.RowDefinitions>
 
                                     
-                                    <Label Margin="15,0,0,0" Text="{Binding MenuItemName}"  Grid.Column="0" Grid.Row="1" FontSize="Medium" HorizontalOptions="CenterAndExpand"/>
+                                    <Label Margin="15,0,0,0" Text="{Binding MenuItemName}"  Grid.Column="0" Grid.Row="1" FontSize="Medium" />
+                                    
 
                                 </Grid>
                             </ViewCell>
